# web4app.io

./: .env  .env.local  .env.py  App.jsx  App.tsx  CMakeLists.txt  CNAME  Cli.js  Docker-compose.yml  Dockerfile  Install.sh  Kubulee.json  Launch.html  Launch.md  Layerfile  Mcp.json  Node.js  Package.json  QubuAi.js  README.md  app.py  app.vue  bash  bash.sh  build.sh  cmake  components.go  config.py  createqubuhub.sh  discord.go  docker-compose.yml  endpoints.go  eslint.config.js  event.go  eventhandlers.go  events.go  fly.toml  go.mod  handler.go  httpd.conf  (+39 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: deploy.yml  docker-publish.yml  google.yml.txt  npm-publish.yml
.nodenv/hooks/exec/: npx-path-fix.bash
172.20.10.6/: index.html
CNAME/app/: value
Docs/: Ant.mdx  AzureWebApp.rst  CopyFiles.rb.mdx  Expo.mdx  index.html  index.mdx  mqtt-client.html
Docs/Prog.dev/: index.mdx
Locale/: locale.go
Model/: ai.configuration.py
Nginx/: Default.conf
TXT/_vercel/: value.yml
_site/: index.html
action/: azure-webapps-node.yml  google.yml
api/: Hello  Main.go  go.mod  interactions_test.go  message.go  web4app.go
api/web4/: logic.js
app/: App.vue
backend/: Dockerfile
backend/app/: main.py
cli/: index.html  index.md  index.py
cli/commands/: env-init.go  env-init.js  index.js
cmake/: nodenv-realpath-libConfig.cmake.in
components/: message.go
docs/: API.md  dashboard.html  index.html  index.md
fronted/: index.html  main.js
fronted/src/: App.jsx
fronted/src/components/: Hero.jsx  Solutions.jsx
frontend/: main.js  package.json
frontend/src/components/: features.jsx
handler/: event.go
handlers/: loggin.go  websocket.go
hello-ngrok/: main.go
models/: Index.js
prometheus/: client.go  client.golang
public/: Index.js  index.html
ratelimiter/: ratelimit.go
run/: catalina.sh
script/: Layerfile.sh  ai_function.py  hybrid_model.py  preversion [-v] [--] [FILES...].bash
scripts/: performance-gate.js
scripts/reports/: bundle-size.json
server/: index.js  routes.js
services/: Recommendation.go  fraud.go  sentiment.go
src/: App.css  Auth.jsx  EmbeddingsService.swift  Launch.html  Package.json  ai_configuration.py  app.css  app.js  app.jsx  cloudflare.js  index.html  realpath.c  server.js  socket.js
src/components/: About.jsx  Chatroom.jsx  ChatroomList.jsx  DarkModeToggle.js  Footer.jsx  chatwindow.js  darkmode.jsx  index.jsx  interactions.go  messageinput.js  sidebar.css  sidebar.js  userprofile.css  userprofile.js  userprofile.jsx
sudo unzip ~/Downloads/ngrok-v3-stable-darwin-arm64.zip -d /usr/local/: bin
test/: message_test.go  ratelimit_test.go  test_page.js  util_test.go
usr/: oauth.go
web4app.io/public/: index.html
web4app.io/src/: App.jsx  style.css
web4app.io/src/components/: About.jsx
